2007-06-18  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* ChangeLog: Added Changelog for widget library.
